--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,11 +10,11 @@ on:
 
 jobs:
   Notify:
-    if: github.event.pull_request.merged == true  # 确保是合并
+    if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.title, 'Push ')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Send Notify
         uses: ./
