优化提醒的信息

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,3 +22,4 @@ jobs:
           notify-url: ${{ secrets.NOTIFY_URL }}
           notify-project: '测试 Notify'
           deploy-success: 'false'
+          add-info: '附加信息'
