--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,10 @@ inputs:
     description: 'A boolean string indicating if the deployment was successful. Use "true" or "false".'
     required: true
 
+  add-info: # optional 附加信息
+    description: 'Additional information to include in the notification.'
+    required: false
+
 runs:
   using: 'node20'
   main: 'lib/index.js'
